Normal now starts with doors open, with them closing before movements. Fire mode will send elevators to floor 1, but cannot currently exit fire mode.